--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
   <script type="text/javascript" src="js/SmoothScroll.js"></script> 
   <script type="text/javascript" src="js/nivo-lightbox.js"></script> 
   <script type="text/javascript" src="js/jquery.isotope.js"></script> 
+  <script type="text/javascript" src="js/swiper-bundle.min.js"></script>
   <script type="text/javascript" src="js/owl.carousel.js"></script> 
   <script type="text/javascript" src="js/jqBootstrapValidation.js"></script> 
   <script type="text/javascript" src="js/main.js"></script>
